--- a/elements/evidence.html
+++ b/elements/evidence.html
@@ -9,32 +9,44 @@
     <h2>Evidence from Fun Facts</h2>
     <form action="https://tinyurl.com/bdu7fvkz">
       <input type="submit" value="Ka and Ba (13 Lila Perl)" />
+</form>
       <form action="https://tinyurl.com/y72c7xk4">
         <input type="submit" value="69 Jacobs" />
     </form>
       <h2>Evidence from DSV</h2>
     <form action="https://tinyurl.com/4v8xmfb5">
       <input type="submit" value="3.1 DSV" />
+</form>
     <form action="https://tinyurl.com/yc8m45p5">
       <input type="submit" value="3.2 DSV" />
+</form>
     <form action="https://tinyurl.com/3h5mv6ej">
       <input type="submit" value="3.3 DSV" />
+</form>
     <form action="https://tinyurl.com/2p97nkar">
       <input type="submit" value="3.4 DSV" />
+</form>
     <form action="https://tinyurl.com/2p8htpvv">
       <input type="submit" value="3.5 DSV" />
+</form>
       <h2>Evidence from Photo Gallery</h2>
     <form action="https://tinyurl.com/2p83sswu">
       <input type="submit" value="Baby's Coffin (82 Jacobs)" />
+</form>
     <form action="https://tinyurl.com/3s6h2trj">
       <input type="submit" value="Inside of Pyramid (83 Jacobs)" />
+</form>
     <form action="https://tinyurl.com/343x8n56">
       <input type="submit" value="Mummy Mask" />
+</form>
     <form action="https://tinyurl.com/2p8c3x66">
       <input type="submit" value="Cat Mummy" />
+</form>
     <form action="https://tinyurl.com/jrnb49eb">
       <input type="submit" value="Hatshepsut as a Sphinx (74 Jacobs)" />
+</form>
     <form action="https://tinyurl.com/2s43pabr">
       <input type="submit" value="King Tut as a Mummy (82 Jacobs)" />
+</form>
   </body>
 </html>
